more debugging nonsense
